reconciliation update